<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">UHF-PARSON</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="invenroty">Inventário</string>
    <string name="frequency_settings">Frequency Settings</string>
    <string name="settings">Configurações</string>

    <string name="sn">Seq</string>
    <string name="tag_type">Tipo</string>
    <string name="epc">EPC</string>
    <string name="password">Senha</string>
    <string name="user">USER</string>
    <string name="tag_count">N° Leituras</string>
    <string name="rssi">rssi</string>
    <string name="multi_tag">Multi tag</string>
    <string name="tid">TID</string>
    <string name="loop">Loop</string>
    <string name="type_6c">6C</string>
    <string name="type_6b">6B</string>
    <string name="type_gb">GB</string>
    <string name="type_gjb">GJB</string>
    <string name="all_tags">Tag:</string>
    <string name="speed">Velocidade:</string>
    <string name="time">Tempo:</string>
    <string name="start_inventory">Ler</string>
    <string name="stop_inventory">Parar</string>
    <string name="cus_read">Cus read</string>
    <string name="excel_export">Exportar</string>
    <string name="clean">Limpar</string>
    <string name="exit_app">Pressione novamente para sair do app</string>
    <string name="module_init_success">Module init success</string>
    <string name="module_init_fail">Falha de inicialização</string>

    <string name="communication_timeout">Sem conexão</string>
    <string name="unknown">unknown</string>
    <string name="read_write_tag">Ler/Gravar tag</string>
    <string name="modify_epc">Modificar EPC</string>
    <string name="tag_select">Selecione a tag:</string>
    <string name="start_addr">Addr(word):</string>
    <string name="length">tamanho(word):</string>
    <string name="access_password">Senha(hex):</string>
    <string name="data">EPC:</string>
    <string name="read_data">Ler dados(hex):</string>
    <string name="read">Ler</string>
    <string name="write">Gravar</string>
    <string name="new_epc">Novo EPC(hex):</string>
    <string name="please_input_hex_string">insira no fomato hex EPC data</string>

    <string name="lock_tag">travar tag</string>
    <string name="lock_data">travar dados:</string>
    <string name="lock_type">travar tipo:</string>

    <string name="lock_tips">Dica: por favor mude a senha antes de travar a tag</string>
    <string name="kill_tag">destruir tag</string>
    <string name="kill_password">"Senha(hex):</string>
    <string name="please_inventory">Please inventory tag before reading and writing</string>

    <string name="start_address_not_null">Starting address cannot be empty</string>
    <string name="len_not_null">Length cannot be empty</string>
    <string name="access_password_not_null">Access password cannot be empty</string>
    <string name="read_fail">Read fail</string>
    <string name="write_fail">Erro na escrita</string>
    <string name="write_success">Escrita com sucesso</string>
    <string name="filter">Filtro</string>
    <string name="please_input_right_access_password">Please enter a hex password of 4 bytes in length</string>
    <string name="please_input_right_write_data">Please enter hex data with double byte digit length</string>
    <string name="please_input_right_epc">Please enter hex EPC data with double byte digit length</string>

    <string name="modify_success">The new EPC has been modified successfully. Please re inventory</string>
    <string name="modify_fail">modify fail</string>
    <string name="lock_success">lock success</string>
    <string name="lock_fail">lock fail</string>

    <string name="kill_success">kill success</string>
    <string name="kill_fail">kill fail</string>

    <string name="base_settings">Configurações Base</string>
    <string name="work_freq">Região:</string>
    <string name="power">Potência:</string>
    <string name="temperature">temperature:</string>
    <string name="temp">temp</string>
    <string name="inventory_settings">Configurações de Inventário</string>

    <string name="query">Buscar</string>
    <string name="q_value">Q value:</string>
    <string name="inventory_type">Leitura:</string>
    <string name="set">salvar</string>
    <string name="fastid">FastID</string>

    <string name="query_success">query success</string>
    <string name="query_fail">query fail</string>
    <string name="set_success">Valor salvo</string>
    <string name="set_fail">set fail</string>

    <string name="help">Ajuda</string>
    <string name="store">store</string>
    <string name="export_excel_need_permission">Permissions required for exporting Excel</string>
    <string name="firmware">Firmware version:%s</string>
    <string name="soft_version">Soft version:%s</string>
    <string name="version_date">Date:%s</string>
    <string name="about">Sobre</string>
    <string name="help_tips">



    </string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="temp_tag">Temperature tag</string>
    <string name="stop_read">Stop read</string>


    <string-array name="temp_manufacturer">
        <item>Yuehe tag</item>
        <item>Yilian tag</item>
    </string-array>

    <!---->
    <string-array name="work_freq">
        <item>China1_920_925</item>
        <item>FCC_902_928</item>
        <item>EU_865_867</item>
    </string-array>

    <!---->
    <string-array name="lock_data">
        <item>Access</item>
        <item>Kill password</item>
        <item>EPC</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>

    <!--session-->
    <string-array name="lock_type">
        <item>Open</item>
        <item>Lock</item>
        <item>Permanent lock</item>
    </string-array>

    <!---->
    <string-array name="session_arrays">
        <item>S0</item>
        <item>S1</item>
        <item>S2-Multi_tag</item>
        <item>S3</item>
    </string-array>

    <!---->
    <string-array name="inventory_type_arrays">
        <item>A</item>
        <item>B</item>
        <item>A|B</item>
    </string-array>

    <!---->
    <string-array name="q_value_arrays">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4-Multi_tag</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>

    </string-array>


    <!---->
    <string-array name="power_arrays">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
    </string-array>

    <!---->
    <string-array name="gb_membank">
        <item></item>
        <item></item>
        <item>User0</item>
        <item>User1</item>
        <item>User2</item>
        <item>User3</item>
        <item>User4</item>
        <item>User5</item>
        <item>User6</item>
        <item>User7</item>
        <item>User8</item>
        <item>User9</item>
        <item>User10</item>
        <item>User11</item>
        <item>User12</item>
        <item>User13</item>
        <item>User14</item>
        <item>User15</item>
    </string-array>


    <string-array name="gb_lock_type">
        <item>1</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
    <string name="title_activity_first_view_logo">FirstViewLogo</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>